manifest/dev/k8s/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-nodeport
spec:
  type: NodePort
  selector:
    role: webapp
  ports:
    - name: http
      protocol: TCP
      port: 3000
      nodePort: 32000
