manifest/dev/k8s/nodes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodes-deployment
spec:
  selector:
    matchLabels:
      role: nodes
  template:
    metadata:
      labels:
        role: nodes
    spec:
      containers:
        - name: nodes
          image: darchlabs/nodes:1.1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6969
          readinessProbe:
            httpGet:
              path: /api/health
              port: 6969
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 6969
            initialDelaySeconds: 1
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: nodes-svc
spec:
  ports:
    - port: 6969
      targetPort: 6969
  selector:
    role: nodes
