manifest/dev/k8s/synchronizers-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synchronizers-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      role: synchronizers
  template:
    metadata:
      labels:
        role: synchronizers
    spec:
      containers:
      - name: synchronizers
        image: darchlabs/synchronizer-v2:1.2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5555
        livenessProbe:
          tcpSocket:
            port: 5555
          initialDelaySeconds: 1
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: synchronizers-svc
spec:
  ports:
  - port: 5555
    targetPort: 5555
  selector:
    role: synchronizers
